# PAR_Assignment1

./: .gitignore  Dockerfile-arm64.melodic  Dockerfile.melodic  README
config/: authorized_keys  bashrc  computers.cfg  gitconfig.sh  repos.cfg  robots.cfg  setup_ROSbot_for_gg.sh  software.cfg
config/rosbot/: 01-network-manager-all.yaml
docker/: Dockerfile.humble  Dockerfile.melodic  Dockerfile.noetic
docker/rosbot/: compose-common.yaml  compose-pro2.yaml  compose-pro3-docker.yaml  compose.yaml
humble_workspace/log/: latest_build
humble_workspace/src/aiil_gazebo/: setup.py
humble_workspace/src/aiil_gazebo/config/: navigation.yaml
humble_workspace/src/aiil_gazebo/launch/: nav.launch.py
humble_workspace/src/aiil_gazebo/models/aiil_hazard_explosives/: model.config
humble_workspace/src/aiil_gazebo/models/aiil_hazard_flammablegas/: model.sdf
humble_workspace/src/aiil_gazebo/models/aiil_hazard_inhalationhazard/: model.sdf
humble_workspace/src/aiil_gazebo/models/aiil_hazard_organicperoxide/: model.sdf
humble_workspace/src/aiil_gazebo/models/aiil_hazard_oxidizer/: model.sdf
humble_workspace/src/aiil_gazebo/worlds/: hazards.sdf  maze.sdf
humble_workspace/src/aiil_rosbot_demo/: package.xml  setup.py
humble_workspace/src/aiil_rosbot_demo/aiil_rosbot_demo/: best_effort_repeater.py  cmd_vel.py  goToPose.py  goToPose2.py  pid.py  publish_hazard.py  publish_navpath.py  transform.py  waypoint.py
humble_workspace/src/aiil_rosbot_demo/config/: explore.yaml  navigation.yaml  oakd.yaml  slam.yaml
humble_workspace/src/aiil_rosbot_demo/launch/: cmd_vel.launch  find_object_2d.launch.py  nav.launch.py
humble_workspace/src/aiil_rosbot_demo/rviz/: foxglove-rmit-rosbot-pro3.json  gazebo.rviz  rosbot-default.rviz
husarion_workspace/pro3/rosbot_description/urdf/components/: base_macro.urdf.xacro
melodic_workspace/src/aiil_gazebo/: package.xml
melodic_workspace/src/aiil_gazebo/models/aiil_hazard_corrosive/: model.sdf
melodic_workspace/src/aiil_gazebo/models/aiil_hazard_corrosive/materials/scripts/: aiil_hazard_corrosive.material
melodic_workspace/src/aiil_gazebo/models/aiil_hazard_dangerouswhenwet/: model.config  model.sdf
melodic_workspace/src/aiil_gazebo/models/aiil_hazard_nonflammablegas/materials/scripts/: aiil_hazard_nonflammablegas.material
melodic_workspace/src/aiil_rosbot_demo/: CMakeLists.txt  package.xml
melodic_workspace/src/aiil_rosbot_demo/config/: exploration.yaml
melodic_workspace/src/aiil_rosbot_demo/launch/: explore.launch  navigation.launch  rosbot_pro.launch  tutorial_gazebo_rosbot.launch  tutorial_gazebo_world.launch
melodic_workspace/src/aiil_rosbot_demo/rviz/: rosbot-default.rviz  webviz-layout.json
melodic_workspace/src/debug_tf/: package.xml
melodic_workspace/src/learning_tf2/: CMakeLists.txt  package.xml
noetic_workspace/src/aiil_gazebo/: CMakeLists.txt  package.xml
noetic_workspace/src/aiil_gazebo/launch/: base_world.launch  hazards_world.launch  rosbot_gazebo.launch  world_empty.launch  world_hazards.launch  world_image_teaching.launch  world_maze.launch  world_object_search.launch
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_corrosive/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_explosives/: model.sdf
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_explosives/materials/scripts/: aiil_hazard_explosives.material
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_flammablegas/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_flammablesolid/: model.config  model.sdf
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_inhalationhazard/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_inhalationhazard/materials/scripts/: aiil_hazard_inhalationhazard.material
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_nonflammablegas/: model.sdf
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_organicperoxide/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_organicperoxide/materials/scripts/: aiil_hazard_organicperoxide.material
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_oxidizer/materials/scripts/: aiil_hazard_oxidizer.material
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_poison/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_poison/materials/scripts/: aiil_hazard_poison.material
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_radioactive/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_spontaneouslycombustible/: model.config
noetic_workspace/src/aiil_gazebo/models/aiil_hazard_spontaneouslycombustible/materials/scripts/: aiil_hazard_spontaneouslycombustible.material
noetic_workspace/src/aiil_rosbot_demo/: CMakeLists.txt
noetic_workspace/src/aiil_rosbot_demo/launch/: find_object.launch  gmapping.launch  navigation.launch  rotate.launch  week04.launch
noetic_workspace/src/aiil_rosbot_demo/launch/nonpro/: all_nonpro.launch
noetic_workspace/src/aiil_rosbot_demo/rviz/: rosbot-default.rviz
noetic_workspace/src/aiil_rosbot_demo/scripts/: rotate.py  week04Error.py  week04pid.py
noetic_workspace/src/debug_tf/: CMakeLists.txt
noetic_workspace/src/debug_tf/launch/: debug_tf.launch
noetic_workspace/src/debug_tf/src/: turtle_tf_listener_debug.cpp
(+9 files in other folders)
