<?xml version="1.0"?>
<package format="2">
  <name>debug_tf</name>
  <version>0.0.0</version>
  <description>The debug_tf package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="timothy.wiley@rmit.edu.au">Dr. Timothy Wiley</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>RMIT IP</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="timothy.wiley@rmit.edu.au">Dr. Timothy Wiley</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>turtlesim</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>

</package>
