<?xml version="1.0"?>
<package format="2">
  <name>aiil_gazebo</name>
  <version>0.0.0</version>
  <description>The aiil_gazebo package for launching gazebo simulations with the ROSbot</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="timothy.wiley@rmit.edu.au">Dr. Timothy Wiley</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Copyright RMIT University</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/aiil_rosbot_demo</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="timothy.wiley@rmit.edu.au">Timothy Wiley</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>aiil_rosbot_demo</exec_depend>
  <exec_depend>husarion_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rosbot_description</exec_depend>

  <!-- Gazebo dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- Gazebo plgin paths -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>

</package>
